# world_bank_data

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  HISTORY.md  MANIFEST.in  README.md  codecov.yml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: codecov.yml
.github/workflows/: continuous-integration.yml  publish.yml
binder/: postBuild  requirements.txt
examples/: A sunburst plot of the world population.py
tests/: test_country.py  test_indicator.py  test_language.py  test_others.py  test_proxies.py  test_region.py  test_search.py  test_version.py  tools.py
world_bank_data/: __init__.py  country.py  indicator.py  options.py  others.py  region.py  request.py  search.py  version.py
