[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "world-bank-data"
dynamic = ["version"]
description = "World Bank Data API in Python"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Marc Wouts", email = "marc.wouts@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "cachetools",
    "pandas",
    "requests",
]

[project.urls]
Homepage = "https://github.com/mwouts/world_bank_data"

[tool.hatch.version]
path = "world_bank_data/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/world_bank_data",
]
